src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/inventory.json.sha512
6f2d3d8b6ca972218219d1d14325df064aba29b7ba174e44d46d6a0fea7e6866f7170aa934efba989f72bfb6dc1f9ac40e70af3d57fc93be2fbac957d31c5141	inventory.json